--- a/indexJoao.html
+++ b/indexJoao.html
@@ -4,8 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site institucional</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <h1>Essa Pagina vai virar um site bonito :)    </h1>
+    <p >Texto informativo</p>
+    <p class="texto-p">Texto</p>
+    <p class="texto-p">Texto</p>
+    <p class="texto-p">Texto</p>
+    <p class="texto-p">Texto</p>
+    <p class="texto-p">Texto</p>
+    <p class="texto-p">Texto</p>
+    <p class="texto-p">Texto</p>
+    <p class="texto-p">Texto</p>
+    <p class="texto-p">Texto</p>
+    <p class="texto-p">Texto</p>
 </body>
 </html>
