--- a/indexJoao.html
+++ b/indexJoao.html
@@ -7,17 +7,21 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Essa Pagina vai virar um site bonito :)    </h1>
-    <p >Texto informativo</p>
-    <p class="texto-p">Texto</p>
-    <p class="texto-p">Texto</p>
-    <p class="texto-p">Texto</p>
-    <p class="texto-p">Texto</p>
-    <p class="texto-p">Texto</p>
-    <p class="texto-p">Texto</p>
-    <p class="texto-p">Texto</p>
-    <p class="texto-p">Texto</p>
-    <p class="texto-p">Texto</p>
-    <p class="texto-p">Texto</p>
+    <div class="header">
+        <div class="container">
+            <div class="title-header">
+                <h1>Projeto IoT revolucionario</h1>
+            </div>
+            <div class="nav">
+                <ul>
+                    <li>Inicio</li>
+                    <li>Sobre</li>
+                    <li>Serviços</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+    
 </body>
 </html>
