mudança nome calculadora

--- a/Algoritmos/Calculadora/calculadora.html
+++ b/Algoritmos/Calculadora/calculadora.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Calculadora</title>
 </head>
 <body> 
     <h1 style="color: rgb(17, 6, 177); background-color: rgb(41, 151, 41); width:900px">Quanto perderá de capital, por ano, com o desperdício de água? </h1>
