Alteração no banco e no código

--- a/ArqComp/NODE4/NODE4/index.html
+++ b/ArqComp/NODE4/NODE4/index.html
@@ -123,7 +123,7 @@
         setInterval(() => {
 			sendTemperature();
 			get_data();
-		}, 1000);
+		}, 1000); // muda o intervalo de atualização do gráfico
 		
 
 	</script>
