--- a/Algoritmos/Calculadora/calculadora.html
+++ b/Algoritmos/Calculadora/calculadora.html
@@ -6,7 +6,7 @@
     <title>Calculadora</title>
 </head>
 <body> 
-    <h1 style="color: rgb(17, 6, 177); background-color: rgb(41, 151, 41); width:900px">Quanto perderá de capital, por ano, com o desperdício de água? </h1>
+    <h1 style="color: rgb(17, 6, 177); background-color: rgb(41, 151, 41); width:900px">Quanto perderá de capital, por mês, com o desperdício de água? </h1>
 
     Coloque quantos km² você quer instalar da nossa tecnologia na sua cidade!
     <input placeholder="km²" id="valor1" type="text">
