--- a/Algoritmos/Calculadora/calculadora.html
+++ b/Algoritmos/Calculadora/calculadora.html
@@ -22,9 +22,9 @@
     
 function calculo() {
  var estimativa = valor1.value * 200000;
-    div_mens.innerHTML =`<b>${estimativa}</b>: Valor estimado, em reais, gerado pelo desperdício de água!<br><br>
-  <b> ${valor1.value * 450000} </b>: Valor da instalação!  <br><br>
-  <b> ${valor1.value * 20000} </b>: Valor mensal para analisar o sistema e informar pontos específicos onde existem vazamentos. 
+    div_mens.innerHTML =`<b>${estimativa}</b>: Valor estimado, em reais, gerado pelo desperdício de água, por km²!<br><br>
+  <b> ${valor1.value * 450000} </b>: Valor da instalação, por km²!  <br><br>
+  <b> ${valor1.value * 20000} </b>: Valor mensal para analisar o sistema e informar pontos específicos onde existem vazamentos, por km². 
     <i><h2 style=color:blue;>Um investimento a médio longo prazo que faz total diferença ecologica e economicamente!!!</h2></i>` ; 
 }
 </script>
