--- a/Algoritmos/Calculadora/calculadora.html
+++ b/Algoritmos/Calculadora/calculadora.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora</title>
 </head>
-<body> 
+<body style="background-color: aqua;"> 
     <h1 style="color: rgb(17, 6, 177); background-color: rgb(41, 151, 41); width:900px">Quanto perderá de capital, por mês, com o desperdício de água? </h1>
 
     Coloque quantos km² você quer instalar da nossa tecnologia na sua cidade!
